# ChronoLog

./: CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp
include/: ConsoleColor.h  LogContext.h  LogLevel.h  LogLevelInfo.h  Logger.h  LoggerConfig.h
src/: ConsoleColor.cpp  Logger.cpp
